# optiscope

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  README.md  lambdaspeed.c  optiscope.c  optiscope.h  perf.txt  tests.c
benchmarks/: 2-power-1000.c  README.md  ackermann.c  church-fibonacci-of-20.c  church-fix-fibonacci-of-20.c  church-list-reverse-and-sum.c  church-y-fibonacci-of-20.c  factorial-of-20.c  fibonacci-of-30.c  owl-explosion.c  scott-bubble-sort.c  scott-insertion-sort.c  scott-merge-sort.c  scott-nqueens.c  scott-quicksort.c  scott-tree-map-and-sum.c  tak.c
benchmarks-bohm/: ackermann.bohm  nqueens.bohm  scott-bubble-sort.bohm  scott-insertion-sort.bohm  scott-merge-sort.bohm  scott-quicksort.bohm  tak.bohm
benchmarks-haskell/: ackermann.hs  church-fibonacci-of-20.hs  church-fix-fibonacci-of-20.hs  church-list-reverse-and-sum.hs  fibonacci-of-30.hs  interpreter.hs  owl-explosion.hs  scott-bubble-sort.hs  scott-insertion-sort.hs  scott-merge-sort.hs  scott-nqueens.hs  scott-quicksort.hs  scott-tree-map-and-sum.hs  tak.hs
benchmarks-ocaml/: ackermann.ml  church_fibonacci_of_20.ml  church_fix_fibonacci_of_20.ml  church_list_reverse_and_sum.ml  fibonacci_of_30.ml  interpreter.ml  owl_explosion.ml  scott_bubble_sort.ml  scott_insertion_sort.ml  scott_merge_sort.ml  scott_nqueens.ml  scott_quicksort.ml  scott_tree_map_and_sum.ml  tak.ml
command/: README.md  bench.sh  compile-haskell.sh  example.sh  (+4 more)
nbe/: dune-project  nbe.opam
nbe/lib/: dune  nbe.ml  nbe.mli
nbe2/: dune-project  nbe2.opam
nbe2/lib/: dune  nbe2.ml  nbe2.mli
nbe2/test/: dune
(+5 files in other folders)
