(lang dune 3.18)

(name nbe2)

(generate_opam_files true)

(source
 (github etiams/lambdaspeed))

(authors "Louis F. Ashfield <louis.ashfield@proton.me>")

(maintainers "Louis F. Ashfield <louis.ashfield@proton.me>")

(license BSD-3-Clause)

(documentation https://github.com/etiams/lambdaspeed)

(package
 (name nbe2)
 (synopsis
  "An alternative OCaml NbE implementation of the pure lambda calculus")
 (depends ocaml))
